beginning to change the pom to avoid bringing arquillian dependencies to non-arquillian builds (like jenkins-test profile)