@@ -42,6 +42,7 @@
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-collections.version>3.2.1</commons-collections.version>
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
+		<commons-io.version>2.4</commons-io.version>
 		<guava.version>18.0</guava.version>
 		<lombok.version>1.14.4</lombok.version>
 
@@ -216,17 +217,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>${commons-beanutils.version}</version>
-		</dependency>
-	
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
-		
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -278,46 +272,20 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- arquillian needs these -->
-
 		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> <scope>test</scope> </dependency> -->
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.jboss.arquillian.graphene</groupId>
-			<artifactId>graphene-webdriver</artifactId>
-			<version>2.0.3.Final</version>
-			<type>pom</type>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-warp</artifactId> <version>${arquillian-warp.version}</version> 
-			<type>pom</type> <scope>test</scope> </dependency> -->
-
-		<dependency>
-			<groupId>org.jboss.arquillian.extension</groupId>
-			<artifactId>arquillian-warp-jsf</artifactId>
-			<version>${arquillian-warp.version}</version>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 
 	</dependencies>
 
@@ -356,66 +324,75 @@
 				<version>${maven-surefire-plugin.version}</version>
 			</plugin>
 
-<!-- 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${maven-failsafe-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>integration-test</id>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<goals>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
-
-			<!-- <plugin> <groupId>org.bsc.maven</groupId> <artifactId>maven-processor-plugin</artifactId> <executions> <execution> 
-				<id>process</id> <goals> <goal>process</goal> </goals> <phase>generate-sources</phase> <configuration> <processors> <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor> 
-				</processors> </configuration> </execution> </executions> <dependencies> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-jpamodelgen</artifactId> 
-				<version>4.3.4.Final</version> </dependency> </dependencies> </plugin> -->
-
 		</plugins>
 	</build>
 
-	<!-- <reporting>
-		<plugins>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>${findbugs-maven-plugin.version}</version>
-				<configuration>
-					<findbugsXmlOutput>true</findbugsXmlOutput>
-					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-					<xmlOutput>true</xmlOutput>
-					<fork>false</fork>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${maven-checkstyle-plugin.version}</version>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<report>checkstyle</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-
-		</plugins>
-	</reporting>
- -->
 	<profiles>
+	
+	
+
+
+		<profile>
+			<!-- Used for testing on jenkins - does not perform Integration Tests (persistence tests) - could not find a solution 
+				to get a container working on jenkins -->
+			<id>jenkins-tests</id>
+			<!-- <properties> <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable> 
+				</properties> TO REACTIVATE JAVA 8 - UNCOMMENT THIS AND RENAME MARKER FILE LOCATED IN 'C:\Users\Chris\git\recipeconnection\.openshift\marker' 
+				FROM 'java7' to 'java8' (and change the eclipse settings -->
+			<dependencies>
+				<!-- enables CDI for arquillian during testing phase - but not persistence -->
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+					<version>${arquillian-weld-ee-embedded-1.1.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire-plugin.version}</version>
+						<configuration>
+							<forkCount>1</forkCount>
+							<reuseForks>true</reuseForks>
+							<redirectTestOutputToFile>false</redirectTestOutputToFile>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+			<!-- THIS IS USED IN CONJUNCTION WITH THE JACOCO PLUGIN FOR (TEST COVERAGE IN) JENKINS, BUT IT FAILS DUE TO OPENSHIFT 
+				SUCKING <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> <version>${jacoco-maven-plugin.version}</version> 
+				<executions> <execution> <goals> <goal>prepare-agent</goal> </goals> </execution> <execution> <id>report</id> <phase>prepare-package</phase> 
+				<goals> <goal>report</goal> </goals> </execution> </executions> </plugin> -->
+
+		</profile>
+
+		<profile>
+			<!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
+			<!-- Use this profile for any OpenShift specific customization your app will need. -->
+			<!-- By default that is to put the resulting archive into the 'deployments' folder. -->
+			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+			<id>openshift</id>
+			<build>
+				<finalName>jbosswildfly</finalName>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.3</version>
+						<configuration>
+							<failOnMissingWebXml>false</failOnMissingWebXml>
+							<outputDirectory>deployments</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 
 		<!-- Used to deploy to localhost - runs all arquillian tests in a CDI container, but skips persistence tests (Integration 
 			Tests). It deploys automatically to localhost as long as it is running. -->
@@ -516,16 +493,58 @@
 
 				<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-persistence-integration-tests</artifactId> 
 					<version>${arquillian-persistence-integration-tests.version}</version> <scope>test</scope> </dependency> -->
+
 				<dependency>
 					<groupId>org.jboss.arquillian.extension</groupId>
 					<artifactId>arquillian-persistence-api</artifactId>
 					<version>${arquillian-persistence.version}</version>
 					<scope>test</scope>
 				</dependency>
+
 				<dependency>
 					<groupId>org.jboss.arquillian.extension</groupId>
 					<artifactId>arquillian-persistence-impl</artifactId>
 					<version>${arquillian-persistence.version}</version>
+					<scope>test</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.jboss.arquillian.junit</groupId>
+					<artifactId>arquillian-junit-container</artifactId>
+					<scope>test</scope>
+				</dependency>
+
+				<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> <scope>test</scope> </dependency> -->
+
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+					<version>1.7.2</version>
+					<scope>test</scope>
+				</dependency>
+
+
+				<dependency>
+					<groupId>org.jboss.arquillian.graphene</groupId>
+					<artifactId>graphene-webdriver</artifactId>
+					<version>2.0.3.Final</version>
+					<type>pom</type>
+					<scope>test</scope>
+				</dependency>
+
+				<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-warp</artifactId> <version>${arquillian-warp.version}</version> 
+					<type>pom</type> <scope>test</scope> </dependency> -->
+
+				<dependency>
+					<groupId>org.jboss.arquillian.extension</groupId>
+					<artifactId>arquillian-warp-jsf</artifactId>
+					<version>${arquillian-warp.version}</version>
+					<scope>test</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.jboss.shrinkwrap.resolver</groupId>
+					<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
 					<scope>test</scope>
 				</dependency>
 
@@ -556,7 +575,6 @@
 						<configuration>
 							<forkCount>1</forkCount>
 							<reuseForks>true</reuseForks>
-							<!-- <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine> -->
 							<systemPropertyVariables>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 								<jboss.home>${jboss.home}</jboss.home>
@@ -595,13 +613,13 @@
 							</execution>
 						</executions>
 					</plugin>
-					
+
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>build-helper-maven-plugin</artifactId>
 						<version>${build-helper-maven-plugin.version}</version>
 						<executions>
-		
+
 							<!-- Add a new source directory to our build -->
 							<execution>
 								<id>add-source</id>
@@ -615,7 +633,7 @@
 									</sources>
 								</configuration>
 							</execution>
-		
+
 							<execution>
 								<id>add-integration-test-sources</id>
 								<phase>generate-test-sources</phase>
@@ -629,96 +647,41 @@
 									</sources>
 								</configuration>
 							</execution>
-		
+
 							<!-- Add a new resource directory to our build -->
 							<!-- <execution> <id>add-integration-test-resources</id> <phase>generate-test-resources</phase> <goals> <goal>add-test-resource</goal> 
 								</goals> <configuration> <resources> <resource> ??<filtering>true</filtering>?? <directory>src/integration-test/resources</directory> 
 								</resource> </resources> </configuration> </execution> -->
 						</executions>
 					</plugin>
-					
-				</plugins>
-			</build>
-		</profile>
 
-		<profile>
-			<!-- Used when pushing statistics to sonar - needs to build and test in order to collect statistics -->
-			<id>sonar</id>
-			<!-- <properties> <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable> 
-				</properties> TO REACTIVATE JAVA 8 - UNCOMMENT THIS AND RENAME MARKER FILE LOCATED IN 'C:\Users\Chris\git\recipeconnection\.openshift\marker' 
-				FROM 'java7' to 'java8' (and change the eclipse settings -->
-			<dependencies>
-				<!-- enables CDI for arquillian during testing phase - but not persistence -->
-				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-					<version>${arquillian-weld-ee-embedded-1.1.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<!-- Used for testing on jenkins - does not perform Integration Tests (persistence tests) - could not find a solution 
-				to get a container working on jenkins -->
-			<id>jenkins-tests</id>
-			<!-- <properties> <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable> 
-				</properties> TO REACTIVATE JAVA 8 - UNCOMMENT THIS AND RENAME MARKER FILE LOCATED IN 'C:\Users\Chris\git\recipeconnection\.openshift\marker' 
-				FROM 'java7' to 'java8' (and change the eclipse settings -->
-			<dependencies>
-				<!-- enables CDI for arquillian during testing phase - but not persistence -->
-				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-					<version>${arquillian-weld-ee-embedded-1.1.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-						<configuration>
-							<forkCount>1</forkCount>
-							<reuseForks>true</reuseForks>
-							<redirectTestOutputToFile>false</redirectTestOutputToFile>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-
-			<!-- THIS IS USED IN CONJUNCTION WITH THE JACOCO PLUGIN FOR (TEST COVERAGE IN) JENKINS, BUT IT FAILS DUE TO OPENSHIFT 
-				SUCKING <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> <version>${jacoco-maven-plugin.version}</version> 
-				<executions> <execution> <goals> <goal>prepare-agent</goal> </goals> </execution> <execution> <id>report</id> <phase>prepare-package</phase> 
-				<goals> <goal>report</goal> </goals> </execution> </executions> </plugin> -->
-
-		</profile>
-
-		<profile>
-			<!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
-			<!-- Use this profile for any OpenShift specific customization your app will need. -->
-			<!-- By default that is to put the resulting archive into the 'deployments' folder. -->
-			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-			<id>openshift</id>
-			<build>
-				<finalName>jbosswildfly</finalName>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>2.3</version>
-						<configuration>
-							<failOnMissingWebXml>false</failOnMissingWebXml>
-							<outputDirectory>deployments</outputDirectory>
-							<warName>ROOT</warName>
-						</configuration>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
 
 	</profiles>
-
 </project>
+
+<!-- AFTER THE BUILD SECTION <reporting> <plugins> <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>findbugs-maven-plugin</artifactId> 
+	<version>${findbugs-maven-plugin.version}</version> <configuration> <findbugsXmlOutput>true</findbugsXmlOutput> <findbugsXmlWithMessages>true</findbugsXmlWithMessages> 
+	<xmlOutput>true</xmlOutput> <fork>false</fork> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+	<artifactId>maven-checkstyle-plugin</artifactId> <version>${maven-checkstyle-plugin.version}</version> <reportSets> <reportSet> 
+	<reports> <report>checkstyle</report> </reports> </reportSet> </reportSets> </plugin> </plugins> </reporting> -->
+
+<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> <version>${maven-failsafe-plugin.version}</version> 
+	<executions> <execution> <id>integration-test</id> <goals> <goal>integration-test</goal> </goals> </execution> <execution> 
+	<id>verify</id> <goals> <goal>verify</goal> </goals> </execution> </executions> </plugin> -->
+
+<!-- <plugin> <groupId>org.bsc.maven</groupId> <artifactId>maven-processor-plugin</artifactId> <executions> <execution> <id>process</id> 
+	<goals> <goal>process</goal> </goals> <phase>generate-sources</phase> <configuration> <processors> <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor> 
+	</processors> </configuration> </execution> </executions> <dependencies> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-jpamodelgen</artifactId> 
+	<version>4.3.4.Final</version> </dependency> </dependencies> </plugin> -->
+
+
+<!-- <profile> < Used when pushing statistics to sonar - needs to build and test in order to collect statistics > <id>sonar</id> 
+	< <properties> <maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr/lib/jvm/jdk1.8.0_05/bin/javac</maven.compiler.executable> 
+	</properties> TO REACTIVATE JAVA 8 - UNCOMMENT THIS AND RENAME MARKER FILE LOCATED IN 'C:\Users\Chris\git\recipeconnection\.openshift\marker' 
+	FROM 'java7' to 'java8' (and change the eclipse settings > <dependencies> < enables CDI for arquillian during testing phase 
+	- but not persistence > <dependency> <groupId>org.jboss.arquillian.container</groupId> <artifactId>arquillian-weld-ee-embedded-1.1</artifactId> 
+	<version>${arquillian-weld-ee-embedded-1.1.version}</version> <scope>test</scope> </dependency> </dependencies> </profile> -->
+
